Added Fiery things

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -15,3 +15,13 @@ tile.myth:canopy_leaves2.name=Canopy Leaves 2
 tile.myth:canopy_log.name=Canopy Log
 item.spawn_egg.entity.myth:minoshroom.name=Spawn Minoshroom
 entity.myth:minoshroom.name=Minoshroom
+item.spawn_egg.entity.myth:ice_giant.name=Spawn Ice Giant
+entity.myth:ice_giant.name=Ice Giant
+item.spawn_egg.entity.myth:yeti.name=Spawn Yeti
+entity.myth:yeti.name=Yeti
+item.myth:fiery_ingot=Fiery Ingot
+item.myth:fiery_sword=Fiery Sword
+item.myth:fiery_helmet=Fiery Helmet
+item.myth:fiery_chestplate=Fiery Chestplate
+item.myth:fiery_leggings=Fiery Leggings
+item.myth:fiery_boots=Fiery Boots
